# amazon_user_product_recommendations

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
pipeline/: __init__.py  collaborative_filtering.py  data_loader.py  main_pipeline.py  rating_matrix.py  sentiment_analysis.py  spark_setup.py  visualization.py
